--- a/GetArrayOfLibraries.xaml
+++ b/GetArrayOfLibraries.xaml
@@ -3,11 +3,12 @@
     <x:Property Name="Bearer" Type="InArgument(x:String)" />
     <x:Property Name="Endpoint" Type="InArgument(x:String)" />
     <x:Property Name="ArrayOfLibrariesVersions" Type="OutArgument(s:Tuple(x:String, x:String)[])" />
+    <x:Property Name="LibrariesFilter" Type="InArgument(s:String[])" />
   </x:Members>
   <mva:VisualBasic.Settings>
     <x:Null />
   </mva:VisualBasic.Settings>
-  <sap:VirtualizedContainerService.HintSize>741,1694</sap:VirtualizedContainerService.HintSize>
+  <sap:VirtualizedContainerService.HintSize>741,2176</sap:VirtualizedContainerService.HintSize>
   <sap2010:WorkflowViewState.IdRef>GetArrayOfLibraries_1</sap2010:WorkflowViewState.IdRef>
   <TextExpression.NamespacesForImplementation>
     <scg:List x:TypeArguments="x:String" Capacity="24">
@@ -62,7 +63,7 @@
       <AssemblyReference>System.Runtime.WindowsRuntime</AssemblyReference>
     </scg:List>
   </TextExpression.ReferencesForImplementation>
-  <Sequence DisplayName="GetArrayOfLibraries" sap:VirtualizedContainerService.HintSize="721,1634" sap2010:WorkflowViewState.IdRef="Sequence_1">
+  <Sequence DisplayName="GetArrayOfLibraries" sap:VirtualizedContainerService.HintSize="721,2116" sap2010:WorkflowViewState.IdRef="Sequence_1">
     <Sequence.Variables>
       <Variable x:TypeArguments="x:String" Name="aResponse" />
       <Variable x:TypeArguments="scg:List(s:Tuple(x:String, x:String))" Default="[New List(of Tuple(Of String, String))]" Name="aListOfLibraries" />
@@ -72,9 +73,9 @@
         <x:Boolean x:Key="IsExpanded">True</x:Boolean>
       </scg:Dictionary>
     </sap:WorkflowViewStateService.ViewState>
-    <TryCatch DisplayName="Try Catch" sap:VirtualizedContainerService.HintSize="679,1542" sap2010:WorkflowViewState.IdRef="TryCatch_2">
+    <TryCatch DisplayName="Try Catch" sap:VirtualizedContainerService.HintSize="679,2024" sap2010:WorkflowViewState.IdRef="TryCatch_2">
       <TryCatch.Try>
-        <Sequence sap:VirtualizedContainerService.HintSize="641,1315" sap2010:WorkflowViewState.IdRef="Sequence_6">
+        <Sequence sap:VirtualizedContainerService.HintSize="641,1797" sap2010:WorkflowViewState.IdRef="Sequence_6">
           <Sequence.Variables>
             <Variable x:TypeArguments="njl:JObject" Name="aResponseObj" />
             <Variable x:TypeArguments="njl:JArray" Name="anArrayOfLibraries" />
@@ -84,7 +85,7 @@
               <x:Boolean x:Key="IsExpanded">True</x:Boolean>
             </scg:Dictionary>
           </sap:WorkflowViewStateService.ViewState>
-          <ui:HttpClient Body="{x:Null}" ConsumerKey="{x:Null}" ConsumerSecret="{x:Null}" ContinueOnError="{x:Null}" OAuth1Token="{x:Null}" OAuth1TokenSecret="{x:Null}" OAuth2Token="{x:Null}" Password="{x:Null}" ResourcePath="{x:Null}" ResponseHeaders="{x:Null}" StatusCode="{x:Null}" Username="{x:Null}" AcceptFormat="JSON" BodyFormat="application/xml" ClientCertificate="[Nothing]" ClientCertificatePassword="[Nothing]" DisplayName="HTTP Request" EndPoint="[Endpoint+&quot;/odata/Libraries&quot;]" sap:VirtualizedContainerService.HintSize="599,22" sap2010:WorkflowViewState.IdRef="HttpClient_3" Method="GET" Result="[aResponse]" TimeoutMS="6000">
+          <ui:HttpClient Body="{x:Null}" ConsumerKey="{x:Null}" ConsumerSecret="{x:Null}" ContinueOnError="{x:Null}" OAuth1Token="{x:Null}" OAuth1TokenSecret="{x:Null}" OAuth2Token="{x:Null}" Password="{x:Null}" ResourcePath="{x:Null}" ResponseHeaders="{x:Null}" StatusCode="{x:Null}" Username="{x:Null}" AcceptFormat="JSON" BodyFormat="application/xml" ClientCertificate="[Nothing]" ClientCertificatePassword="[Nothing]" DisplayName="HTTP Request" EndPoint="[Endpoint+&quot;/odata/Libraries?$orderby=Id asc&quot;]" sap:VirtualizedContainerService.HintSize="599,22" sap2010:WorkflowViewState.IdRef="HttpClient_3" Method="GET" Result="[aResponse]" TimeoutMS="6000">
             <ui:HttpClient.Attachments>
               <scg:Dictionary x:TypeArguments="x:String, InArgument(x:String)" />
             </ui:HttpClient.Attachments>
@@ -103,24 +104,59 @@
           </ui:HttpClient>
           <ui:DeserializeJson x:TypeArguments="njl:JObject" DisplayName="Deserialize JSON" sap:VirtualizedContainerService.HintSize="599,60" sap2010:WorkflowViewState.IdRef="DeserializeJson`1_2" JsonObject="[aResponseObj]" JsonString="[aResponse]" />
           <ui:DeserializeJsonArray DisplayName="Deserialize JSON Array" sap:VirtualizedContainerService.HintSize="599,60" sap2010:WorkflowViewState.IdRef="DeserializeJsonArray_2" JsonArray="[anArrayOfLibraries]" JsonString="[aResponseObj(&quot;value&quot;).ToString]" />
-          <ui:ForEach x:TypeArguments="njl:JObject" CurrentIndex="{x:Null}" DisplayName="For Each" sap:VirtualizedContainerService.HintSize="599,861" sap2010:WorkflowViewState.IdRef="ForEach`1_3" Values="[anArrayOfLibraries]">
+          <ui:ForEach x:TypeArguments="njl:JObject" CurrentIndex="{x:Null}" DisplayName="For Each" sap:VirtualizedContainerService.HintSize="599,1343" sap2010:WorkflowViewState.IdRef="ForEach`1_3" Values="[anArrayOfLibraries]">
             <ui:ForEach.Body>
               <ActivityAction x:TypeArguments="njl:JObject">
                 <ActivityAction.Argument>
                   <DelegateInArgument x:TypeArguments="njl:JObject" Name="aLibrary" />
                 </ActivityAction.Argument>
-                <Sequence DisplayName="Body" sap:VirtualizedContainerService.HintSize="563,727" sap2010:WorkflowViewState.IdRef="Sequence_5">
+                <Sequence sap:VirtualizedContainerService.HintSize="563,1209" sap2010:WorkflowViewState.IdRef="Sequence_11">
                   <Sequence.Variables>
-                    <Variable x:TypeArguments="ui:GenericValue" Name="aRubbish" />
+                    <Variable x:TypeArguments="x:Boolean" Name="isInFilter" />
                   </Sequence.Variables>
                   <sap:WorkflowViewStateService.ViewState>
                     <scg:Dictionary x:TypeArguments="x:String, x:Object">
                       <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                     </scg:Dictionary>
                   </sap:WorkflowViewStateService.ViewState>
-                  <If Condition="[aLibrary(&quot;Authors&quot;).ToString = &quot;USSR&quot;]" sap:VirtualizedContainerService.HintSize="521,635" sap2010:WorkflowViewState.IdRef="If_1">
+                  <Assign sap:VirtualizedContainerService.HintSize="521,60" sap2010:WorkflowViewState.IdRef="Assign_12">
+                    <Assign.To>
+                      <OutArgument x:TypeArguments="x:Boolean">[isInFilter]</OutArgument>
+                    </Assign.To>
+                    <Assign.Value>
+                      <InArgument x:TypeArguments="x:Boolean">False</InArgument>
+                    </Assign.Value>
+                  </Assign>
+                  <ui:ForEach x:TypeArguments="x:String" CurrentIndex="{x:Null}" DisplayName="For Each" sap:VirtualizedContainerService.HintSize="521,342" sap2010:WorkflowViewState.IdRef="ForEach`1_4" Values="[LibrariesFilter]">
+                    <ui:ForEach.Body>
+                      <ActivityAction x:TypeArguments="x:String">
+                        <ActivityAction.Argument>
+                          <DelegateInArgument x:TypeArguments="x:String" Name="aFilterLibrary" />
+                        </ActivityAction.Argument>
+                        <If Condition="[aLibrary(&quot;Id&quot;).ToString = aFilterLibrary]" sap:VirtualizedContainerService.HintSize="484,208" sap2010:WorkflowViewState.IdRef="If_3">
+                          <If.Then>
+                            <Assign sap:VirtualizedContainerService.HintSize="262,60" sap2010:WorkflowViewState.IdRef="Assign_13">
+                              <Assign.To>
+                                <OutArgument x:TypeArguments="x:Boolean">[isInFilter]</OutArgument>
+                              </Assign.To>
+                              <Assign.Value>
+                                <InArgument x:TypeArguments="x:Boolean">True</InArgument>
+                              </Assign.Value>
+                            </Assign>
+                          </If.Then>
+                        </If>
+                      </ActivityAction>
+                    </ui:ForEach.Body>
+                  </ui:ForEach>
+                  <If Condition="[LibrariesFilter.Count = 0 Or isInFilter]" sap:VirtualizedContainerService.HintSize="521,635" sap2010:WorkflowViewState.IdRef="If_2">
+                    <sap:WorkflowViewStateService.ViewState>
+                      <scg:Dictionary x:TypeArguments="x:String, x:Object">
+                        <x:Boolean x:Key="IsExpanded">True</x:Boolean>
+                        <x:Boolean x:Key="IsPinned">False</x:Boolean>
+                      </scg:Dictionary>
+                    </sap:WorkflowViewStateService.ViewState>
                     <If.Then>
-                      <Sequence sap:VirtualizedContainerService.HintSize="376,487" sap2010:WorkflowViewState.IdRef="Sequence_8">
+                      <Sequence sap:VirtualizedContainerService.HintSize="376,487" sap2010:WorkflowViewState.IdRef="Sequence_9">
                         <Sequence.Variables>
                           <Variable x:TypeArguments="s:Tuple(x:String, x:String)" Name="aNewLibrary" />
                         </Sequence.Variables>
@@ -129,7 +165,7 @@
                             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
                           </scg:Dictionary>
                         </sap:WorkflowViewStateService.ViewState>
-                        <Assign sap:VirtualizedContainerService.HintSize="334,60" sap2010:WorkflowViewState.IdRef="Assign_10">
+                        <Assign sap:VirtualizedContainerService.HintSize="334,60" sap2010:WorkflowViewState.IdRef="Assign_11">
                           <Assign.To>
                             <OutArgument x:TypeArguments="s:Tuple(x:String, x:String)">[aNewLibrary]</OutArgument>
                           </Assign.To>
@@ -137,8 +173,8 @@
                             <InArgument x:TypeArguments="s:Tuple(x:String, x:String)">[New Tuple(of String, String) (aLibrary("Id").ToString, aLibrary("Version").ToString)]</InArgument>
                           </Assign.Value>
                         </Assign>
-                        <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="334,91" sap2010:WorkflowViewState.IdRef="LogMessage_5" Level="Info" Message="[aNewLibrary.ToString]" />
-                        <ui:InvokeCode ContinueOnError="{x:Null}" Code="aListOfLibraries.Add(aNewLibrary)" DisplayName="Invoke code" sap:VirtualizedContainerService.HintSize="334,164" sap2010:WorkflowViewState.IdRef="InvokeCode_1">
+                        <ui:LogMessage DisplayName="Log Message" sap:VirtualizedContainerService.HintSize="334,91" sap2010:WorkflowViewState.IdRef="LogMessage_6" Level="Info" Message="[aNewLibrary.ToString]" />
+                        <ui:InvokeCode ContinueOnError="{x:Null}" Code="aListOfLibraries.Add(aNewLibrary)" DisplayName="Invoke code" sap:VirtualizedContainerService.HintSize="334,164" sap2010:WorkflowViewState.IdRef="InvokeCode_2">
                           <ui:InvokeCode.Arguments>
                             <InOutArgument x:TypeArguments="scg:List(s:Tuple(x:String, x:String))" x:Key="aListOfLibraries">[aListOfLibraries]</InOutArgument>
                             <InArgument x:TypeArguments="s:Tuple(x:String, x:String)" x:Key="aNewLibrary">[aNewLibrary]</InArgument>
